--- a/documentation.html
+++ b/documentation.html
@@ -30,7 +30,7 @@
 	<h2>About</h2>
 	
 	<p>
-		Palette is a web-based tool that lets a user to discover an image's color palette and explore color palette relationships. Upload images to see a summary of their color makeup, select swatches or enter your own color to see color palette recommendations such as complement and split complement with example CSS code snippets, and convert between Hex and RGB.
+		Palette is a web-based tool that lets a user discover an image's color palette and explore color palette relationships. Upload images to see a summary of their color makeup, select swatches or enter your own color to see color palette recommendations such as complement and split complement with example CSS code snippets, and convert between Hex and RGB.
 	</p>
 	
 	<h2>How To Use</h2>
